[workspace]
members = [ "dataframe", "launch_file" ]
resolver = "2"

[package]
name = "midas-launch"
version = "1.6.0"
edition = "2021"
rust-version = "1.77.1"

[profile.dev]
opt-level = 1

[profile.profile]
inherits = "release"
debug = 1

[dependencies]
dataframe = { path = "dataframe" }
launch_file = { path = "launch_file" }
egui = { version = "0.29", features = ["persistence"] }
egui_extras = { version = "0.29" }
egui_plot = { version = "0.29" }
eframe = { version = "0.29", features = ["default_fonts", "glow", "wayland", "x11", "persistence"], default-features = false }
image = { version = "0.25.2", features = ["png"], default-features = false }
rfd = "0.15.0"
ron = "0.8.1"
futures-lite = { version = "2.3.0" }
