[workspace]
members = [ "dataframe", "launch_file" ]
resolver = "2"

[package]
name = "midas-launch"
version = "1.6.0"
edition = "2021"
rust-version = "1.81.0"

[profile.dev]
opt-level = 1

[profile.profile]
inherits = "release"
debug = 1

[dependencies]
dataframe = { path = "dataframe" }
launch_file = { path = "launch_file" }
egui = { version = "0.29.1", features = ["persistence"] }
egui_extras = { version = "0.29.1", default-features = false }
egui_plot = { version = "0.29.0" }
egui-toast = { version = "0.15.0" }
eframe = { version = "0.29.1", features = ["default_fonts", "glow", "wayland", "x11", "persistence"], default-features = false }
image = { version = "0.25.2", features = ["png"], default-features = false }
futures-lite = { version = "2.3.0" }
rfd = "0.15.0"
ron = "0.8.1"
semver = "1.0.26"
serde_json = "1.0.140"
ureq = { version = "3.0.12", features = ["json"] }
