[package]
name = "launch_file"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dataframe = { path = "../dataframe" }
indexmap = { version = "2.2.6", features = ["serde"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = { version = "1.0.115" }
byteorder = "1.5.0"
directories = "5.0.1"
